# supermag

./: LICENSE  README.md  __init__.py  example_file.txt  pyproject.toml  station_info.txt  supermag.py  supermag_api.py  supermag_hapi.py  test_supermag.py
data/: example_index.txt  example_novers.txt  example_v5.txt
