[project]
name = "supermag"
version = "0.1"
description = "An interface for reading, fetching, and manipulating SuperMAG data sets."
readme = "README.md"
license = { "file" = "LICENSE" }
requires-python = ">=3.7"
authors = [{ "name" = "Daniel Welling", "email" = "dwelling@umich.edu" }]

urls = { "repository" = "https://github.com/spacecataz/supermag" }
dependencies = [
  "numpy>=1.15.1",
  "scipy>=1.0",
  "matplotlib>=3.1",
  "hapiclient>=0.2.6"
]

